fix: use native-safe kubernetes ingress client